# DeepLanczos

./: .gitignore  LICENSE  README.md
.github/workflows/: tests.yml
deeplanczos/: README.md  pyproject.toml  pytest.ini
deeplanczos/src/deep_lanczos/: power_method.py  utils.py
deeplanczos/src/deeplanczos/: __init__.py  power_method.py
deeplanczos/tests/: test_Hello.py  test_powerMethods_HVP.py  test_powerMethods_fullStep.py  test_powerMethods_utils.py
deeplanczos/tests/utils/: BN_mlp.py  batch.py
