[project]
name = "deeplanczos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucadic", email = "ld1440@princeton.edu" }
]
requires-python = ">=3.8"
dependencies = ["jax[cuda12]", "flax", "numpy", "h5py"]

[project.scripts]
deep-lanczos = "deep_lanczos:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
