[project]
name = "deeplanczos"
version = "0.1.0"
description = "JAX implementation of Power Method and Lanczos algorithms for estimating the largest eigenvalue of neural network Hessians"
readme = "README.md"
authors = [
    { name = "lucadic", email = "ld1440@princeton.edu" }
]
requires-python = ">=3.8"
dependencies = ["jax[cuda12]", "flax", "numpy", "h5py"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
deep-lanczos = "deeplanczos:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
